--- a/DiffuserStick/Base.lproj/Main.storyboard
+++ b/DiffuserStick/Base.lproj/Main.storyboard
@@ -120,18 +120,39 @@
         <!--Item-->
         <scene sceneID="UmM-c8-vH4">
             <objects>
-                <viewController id="VkP-0k-GXU" sceneMemberID="viewController">
+                <viewController id="VkP-0k-GXU" customClass="SettingViewController" customModule="DiffuserStick" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9Tg-Jt-uwy">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ggL-Qv-GSw">
+                                <rect key="frame" x="0.0" y="134" width="414" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="VkP-0k-GXU" id="lL7-Be-766"/>
+                                    <outlet property="delegate" destination="VkP-0k-GXU" id="ypH-Gh-syY"/>
+                                </connections>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iAD-Tf-ssN">
+                                <rect key="frame" x="20" y="94" width="374" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="54"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="kGl-MK-p1N"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="kvm-Qt-cOa"/>
+                    <connections>
+                        <outlet property="lblFontExample" destination="iAD-Tf-ssN" id="C7T-qo-KZV"/>
+                        <outlet property="pkvAvailableFontList" destination="ggL-Qv-GSw" id="rbp-Fj-QfH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MM6-YW-b9o" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="71" y="768"/>
+            <point key="canvasLocation" x="69.565217391304358" y="767.41071428571422"/>
         </scene>
         <!--Diffuser Add View Controller-->
         <scene sceneID="9FL-H2-9gV">
@@ -198,11 +219,17 @@
                                 <rect key="frame" x="262" y="491" width="106" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="사진찍기 (아이콘)"/>
+                                <connections>
+                                    <action selector="btnTakePhoto:" destination="VgC-oY-3JU" eventType="touchUpInside" id="35i-T6-wNW"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nhw-fW-ccp">
                                 <rect key="frame" x="256" y="514" width="119" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="사진올리기 (아이콘)"/>
+                                <connections>
+                                    <action selector="btnLoadPhoto:" destination="VgC-oY-3JU" eventType="touchUpInside" id="NHM-Oe-Y1q"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="diffuser" translatesAutoresizingMaskIntoConstraints="NO" id="hos-HF-Y1o">
                                 <rect key="frame" x="20" y="491" width="193" height="110"/>
@@ -253,6 +280,11 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="SzK-5H-oyt"/>
+                    <connections>
+                        <outlet property="datepickerStartDate" destination="aGM-rh-Irt" id="wEW-MA-hdO"/>
+                        <outlet property="imgPhoto" destination="hos-HF-Y1o" id="jkS-t1-J4j"/>
+                        <outlet property="inputTitle" destination="sTC-ef-a4Z" id="zgo-o3-ndG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oeo-fr-wBl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
